--- a/tests/langraph/test-graph-1.ipynb
+++ b/tests/langraph/test-graph-1.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from https://www.youtube.com/watch?v=PqS1kib7RTw"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -24,12 +31,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.messages import  HumanMessage, BaseMessage\n",
+    "from langchain_core.agents import AgentAction, AgentFinish\n",
+    "from langgraph.graph import END, MessageGraph\n",
+    "from langchain.tools import BaseTool, StructuredTool, Tool, tool\n",
+    "import operator\n",
+    "from typing import TypedDict, Annotated, List, Union"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.messages import  HumanMessage\n",
-    "from langgraph.graph import END, MessageGraph"
+    "class AgentState(TypedDict):\n",
+    "    input: str\n",
+    "    chat_history: list[BaseMessage]\n",
+    "    agent_outcome: Union[AgentAction, AgentFinish, None]\n",
+    "    intermediate_steps: Annotated[list[tuple[AgentAction, str]], operator.add] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool(\"lower_case\", return_direct=True)\n",
+    "def to_lower_case(input:str)->str:\n",
+    "    \"\"\" Returns the input as all lower case.\"\"\"\n",
+    "    return input.lower()\n",
+    "\n",
+    "@tool(\"random_number\", return_direct=True)\n",
+    "def random_number_maker(input: str) -> str:\n",
+    "    \"\"\" Returns a random number between 0 - 100.\"\"\"\n",
+    "    return random.randint(0,100)\n",
+    "\n",
+    "tools = [to_lower_case, random_number_maker]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_number_maker.run('random')"
    ]
   },
   {
