--- a/tests/agent/test1.ipynb
+++ b/tests/agent/test1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "groq_api_key = os.getenv(\"GROQ_API_KEY\")\n",
     "\n",
-    "MODEL_NAME = \"mixtral-8x7b-32768\"\n",
+    "MODEL_NAME = \"llama-3.1-70b-versatile\"\n",
     "\n",
     "llm = ChatGroq(\n",
     "    temperature=0,\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        " MessagesPlaceholder(variable_name='agent_scratchpad')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,10 +68,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Search Tool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.tools import DuckDuckGoSearchRun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search = DuckDuckGoSearchRun()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Learn the average and minimum/maximum distances of the Moon from Earth, and how to compare them with Earth's size. Find out why the Moon looks close but is actually far away, and try an activity to see for yourself. Learn about the Moon's size, composition, distance from Earth, and why it has phases. The Moon's average distance from Earth is about 238,900 miles, but it varies depending on its orbit. The Moon is Earth's only natural satellite.It orbits at an average distance of 384,400 km (238,900 mi), about 30 times the diameter of Earth. Tidal forces between Earth and the Moon have over time synchronized the Moon's orbital period (lunar month) with its rotation period at 29.5 Earth days, causing the same side of the Moon to always face Earth. . The Moon's gravitational pull - and to a ... How far away is the moon? To find out how long it takes to get to the moon, we first must know how far away it is. The average distance between Earth and the moon is about 238,855 miles (384,400 ... The sun and moon are different sizes and located at different distances from the Earth. ... accessed Jan. 16, How far away is the moon? The New York Times, April 12, 1985, ...\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search.invoke(\"how far is the moon?\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
