--- a/tests/base.ipynb
+++ b/tests/base.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "groq_api_key = os.getenv(\"GROQ_API_KEY\")\n",
     "\n",
-    "MODEL_NAME = \"mixtral-8x7b-32768\"\n",
+    "MODEL_NAME = \"llama-3.1-70b-versatile\"\n",
     "\n",
     "llm = ChatGroq(\n",
     "    temperature=0,\n",
