--- a/tests/test2.ipynb
+++ b/tests/test2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "groq_api_key = os.getenv(\"GROQ_API_KEY\")\n",
     "\n",
     "# MODEL_NAME = \"mixtral-8x7b-32768\"\n",
-    "MODEL_NAME = \"llama3-70b-8192\"\n",
+    "MODEL_NAME = \"llama-3.1-70b-versatile\"\n",
     "llm = ChatGroq(\n",
     "    temperature=0,\n",
     "    model_name=MODEL_NAME,\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I don't know. The provided web search context is empty, and the question \"What's up?\" is too vague to provide a meaningful answer without additional context.\n"
+      "I don't know. The provided web search context does not contain any information that can help answer the question \"What's up?\"\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,22 +176,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "import requests\n",
       "from bs4 import BeautifulSoup\n",
       "\n",
-      "response = requests.get('http://oferb-nomad1.nvidia.com:9001/login')\n",
-      "soup = BeautifulSoup(response.text, 'html.parser')\n",
-      "title = soup.find('title').text\n",
-      "print(title)\n",
-      "\n"
+      "def get_title():\n",
+      "    url = \"http://oferb-nomad1.nvidia.com:9001/login\"\n",
+      "    response = requests.get(url)\n",
+      "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+      "    title = soup.title\n",
+      "    print(title.text)\n",
+      "\n",
+      "get_title()\n"
      ]
     }
    ],
