--- a/tests/tools/test1.ipynb
+++ b/tests/tools/test1.ipynb
@@ -9,7 +9,8 @@
     "from langchain_groq import ChatGroq\n",
     "from langchain_core.tools import tool\n",
     "from langchain.agents import create_tool_calling_agent, AgentExecutor\n",
-    "from langchain_core.prompts import ChatPromptTemplate"
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_community.callbacks import get_openai_callback\n"
    ]
   },
   {
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -119,19 +120,25 @@
      "text": [
       "\n",
       "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `multiply` with `{'x': 5, 'y': 2}`\n",
+      "Invoking: `add` with `{'x': 3, 'y': 5}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m10.0\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `add` with `{'x': 3, 'y': 10.0}`\n",
+      "\u001b[0m\u001b[33;1m\u001b[1;3m8.0\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `multiply` with `{'x': 8.0, 'y': 2}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[33;1m\u001b[1;3m13.0\u001b[0m\u001b[32;1m\u001b[1;3mThe final answer to the user's question is: 13.0.\u001b[0m\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m16.0\u001b[0m\u001b[32;1m\u001b[1;3mThe final answer to the question \"What's 3 plus 5 multiplied by 2?\" is 16.0.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'input': \"What's 3 plus 5 multiplied by 2?\", 'output': \"The final answer to the user's question is: 13.0.\"}\n"
+      "{'input': \"What's 3 plus 5 multiplied by 2?\", 'output': 'The final answer to the question \"What\\'s 3 plus 5 multiplied by 2?\" is 16.0.'}\n"
      ]
     }
    ],
@@ -142,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +158,13 @@
      "text": [
       "\n",
       "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\u001b[32;1m\u001b[1;3m\n",
       "Invoking: `fake_weather_api` with `{'city': 'Tel-Aviv'}`\n",
       "\n",
@@ -170,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -180,13 +193,89 @@
        " 'output': 'The current weather in Tel-Aviv is Sunny, 33°C.'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\n",
+      "Full Prompt:\n",
+      "System: You're a helpful assistant skilled in math operations.\n",
+      "Human: What's 3 plus 5 multiplied by 2?\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `add` with `{'x': 3, 'y': 5}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[33;1m\u001b[1;3m8.0\u001b[0m\n",
+      "Full Prompt:\n",
+      "System: You're a helpful assistant skilled in math operations.\n",
+      "Human: What's 3 plus 5 multiplied by 2?\n",
+      "AI: \n",
+      "Tool: 8.0\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `multiply` with `{'x': 8.0, 'y': 2}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m16.0\u001b[0m\n",
+      "Full Prompt:\n",
+      "System: You're a helpful assistant skilled in math operations.\n",
+      "Human: What's 3 plus 5 multiplied by 2?\n",
+      "AI: \n",
+      "Tool: 8.0\n",
+      "AI: \n",
+      "Tool: 16.0\n",
+      "\u001b[32;1m\u001b[1;3mThe final answer to the question \"What's 3 plus 5 multiplied by 2?\" is 16.0.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "{'input': \"What's 3 plus 5 multiplied by 2?\", 'output': 'The final answer to the question \"What\\'s 3 plus 5 multiplied by 2?\" is 16.0.'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.callbacks.base import BaseCallbackHandler\n",
+    "\n",
+    "class PromptPrintingCallbackHandler(BaseCallbackHandler):\n",
+    "    def on_llm_start(self, serialized, prompts, **kwargs):\n",
+    "        print(\"\\nFull Prompt:\")\n",
+    "        for prompt in prompts:\n",
+    "            print(prompt)\n",
+    "\n",
+    "# Use the custom callback handler\n",
+    "callback_handler = PromptPrintingCallbackHandler()\n",
+    "\n",
+    "llm = ChatGroq(\n",
+    "    temperature=0,\n",
+    "    model_name=MODEL_NAME,\n",
+    "    groq_api_key=groq_api_key,\n",
+    "    callbacks=[callback_handler]\n",
+    ")\n",
+    "\n",
+    "agent = create_tool_calling_agent(llm, tools, prompt)\n",
+    "\n",
+    "agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True)\n",
+    "\n",
+    "\n",
+    "result = agent_executor.invoke(\n",
+    "    {\"input\": \"What's 3 plus 5 multiplied by 2?\"}\n",
+    ")\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
