--- a/tests/test1.ipynb
+++ b/tests/test1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "groq_api_key = os.getenv(\"GROQ_API_KEY\")\n",
     "\n",
-    "MODEL_NAME = \"mixtral-8x7b-32768\"\n",
+    "MODEL_NAME = \"llama-3.1-70b-versatile\"\n",
     "\n",
     "llm = ChatGroq(\n",
     "    temperature=0,\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Low latency Large Language Models (LLMs) are crucial for real-time applications like chatbots, voice assistants, and online gaming. They enable quick, responsive interactions, enhancing user experience. Reduced latency also allows for more efficient processing, saving computational resources and enabling faster decision-making in time-sensitive scenarios.\n"
+      "Low-latency Large Language Models (LLMs) are crucial for real-time applications, such as conversational AI, voice assistants, and live language translation. They enable fast and responsive interactions, improving user experience and engagement. Low latency also facilitates more natural and human-like conversations, making LLMs more effective and accessible in various industries.\n"
      ]
     }
    ],
