--- a/tests/tools/test1.ipynb
+++ b/tests/tools/test1.ipynb
@@ -15,6 +15,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AzureCogsSpeech2TextTool\n",
+      "AzureCogsText2SpeechTool\n",
+      "AzureCogsTextAnalyticsHealthTool\n",
+      "BaseGraphQLTool\n",
+      "BaseRequestsTool\n",
+      "BaseSQLDatabaseTool\n",
+      "BaseSparkSQLTool\n",
+      "BaseTool\n",
+      "BearlyInterpreterTool\n",
+      "BingSearchResults\n",
+      "BingSearchRun\n",
+      "BraveSearch\n",
+      "ClickTool\n",
+      "CopyFileTool\n",
+      "CurrentWebPageTool\n",
+      "...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.tools import __all__ as public_api\n",
+    "print('\\n'.join(public_api[10:25]) + '\\n...')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
