--- a/tests/AIR/test2.ipynb
+++ b/tests/AIR/test2.ipynb
@@ -2,7 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +18,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,20 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Simulation 'gNMI Test' 47749582-bf36-40b7-a4c1-a7dfab0b6139>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "simulations = air.simulations.list()\n",
     "simulations[0]"
@@ -70,17 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'class': 'Simulation', 'attributes': {'_deleted': 'bool', '_updatable': 'bool', '_deletable': 'bool', '_api': 'SimulationApi', 'url': 'str', 'id': 'str', 'topology': 'LazyLoaded', 'topology_id': 'str', 'state': 'str', 'nodes': 'LazyLoadedList', 'services': 'list', 'name': 'str', 'expires': 'bool', 'expires_at': 'datetime', 'sleep': 'bool', 'sleep_at': 'datetime', 'netq_username': 'str', 'netq_password': 'str', 'title': 'str', 'organization': 'NoneType', 'citc': 'bool', 'demo': 'NoneType', 'metadata': 'str', 'documentation': 'NoneType', 'cloned': 'bool', 'created': 'datetime', 'organization_name': 'NoneType'}, 'methods': ['__repr__', 'create_service', 'add_permission', 'control', 'load', 'start', 'stop', 'store', 'delete', 'preferences']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def object_structure(obj):\n",
     "    return {\n",
@@ -91,6 +79,15 @@
     "\n",
     "structure = object_structure(simulations[0])\n",
     "print(structure)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulations[0].title"
    ]
   },
   {
