--- a/tests/tools/test1.ipynb
+++ b/tests/tools/test1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,13 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "groq_api_key = os.getenv(\"GROQ_API_KEY\")\n",
     "\n",
-    "MODEL_NAME = \"mixtral-8x7b-32768\"\n",
+    "# MODEL_NAME = \"mixtral-8x7b-32768\"\n",
+    "# MODEL_NAME=\"llama3-groq-70b-8192-tool-use-preview\"\n",
+    "\n",
+    "# User the following for tool calling\n",
+    "MODEL_NAME=\"llama-3.1-70b-versatile\" \n",
     "\n",
     "llm = ChatGroq(\n",
     "    temperature=0,\n",
@@ -87,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -153,25 +157,19 @@
      "text": [
       "\n",
       "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `add` with `{'x': 3, 'y': 5}`\n",
+      "Invoking: `add` with `{'x': '3', 'y': '10'}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[33;1m\u001b[1;3m8.0\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `multiply` with `{'x': 8.0, 'y': 2}`\n",
+      "\u001b[0m\u001b[33;1m\u001b[1;3m13.0\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `multiply` with `{'x': '5', 'y': '2'}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m16.0\u001b[0m\u001b[32;1m\u001b[1;3mThe final answer to the question \"What's 3 plus 5 multiplied by 2?\" is 16.0.\u001b[0m\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m10.0\u001b[0m\u001b[32;1m\u001b[1;3mThe answer is 13.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'input': \"What's 3 plus 5 multiplied by 2?\", 'output': 'The final answer to the question \"What\\'s 3 plus 5 multiplied by 2?\" is 16.0.'}\n"
+      "{'input': \"What's 3 plus 5 multiplied by 2?\", 'output': 'The answer is 13.'}\n"
      ]
     }
    ],
@@ -182,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -191,21 +189,15 @@
      "text": [
       "\n",
       "\n",
-      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3m\n",
       "Invoking: `fake_weather_api` with `{'city': 'Tel-Aviv'}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[38;5;200m\u001b[1;3mSunny, 33°C\u001b[0m\u001b[32;1m\u001b[1;3mThe current weather in Tel-Aviv is Sunny, 33°C.\u001b[0m\n",
+      "\u001b[0m\u001b[38;5;200m\u001b[1;3mSunny, 33°C\u001b[0m\u001b[32;1m\u001b[1;3mThe current weather in Tel-Aviv is sunny with a temperature of 33°C.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'input': \"What's the current weather in Tel-Aviv?\", 'output': 'The current weather in Tel-Aviv is Sunny, 33°C.'}\n"
+      "{'input': \"What's the current weather in Tel-Aviv?\", 'output': 'The current weather in Tel-Aviv is sunny with a temperature of 33°C.'}\n"
      ]
     }
    ],
@@ -216,17 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'input': \"What's the current weather in Tel-Aviv?\",\n",
-       " 'output': 'The current weather in Tel-Aviv is Sunny, 33°C.'}"
+       " 'output': 'The current weather in Tel-Aviv is sunny with a temperature of 33°C.'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -252,31 +244,24 @@
       "System: You're a helpful assistant skilled in math operations.\n",
       "Human: What's 3 plus 5 multiplied by 2?\n",
       "\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `add` with `{'x': 3, 'y': 5}`\n",
+      "Invoking: `add` with `{'x': 3, 'y': 10}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[33;1m\u001b[1;3m8.0\u001b[0m\n",
+      "\u001b[0m\u001b[33;1m\u001b[1;3m13.0\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `multiply` with `{'x': 5, 'y': 2}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m10.0\u001b[0m\n",
       "Full Prompt:\n",
       "System: You're a helpful assistant skilled in math operations.\n",
       "Human: What's 3 plus 5 multiplied by 2?\n",
       "AI: \n",
-      "Tool: 8.0\n",
-      "\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `multiply` with `{'x': 8.0, 'y': 2}`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m16.0\u001b[0m\n",
-      "Full Prompt:\n",
-      "System: You're a helpful assistant skilled in math operations.\n",
-      "Human: What's 3 plus 5 multiplied by 2?\n",
-      "AI: \n",
-      "Tool: 8.0\n",
-      "AI: \n",
-      "Tool: 16.0\n",
-      "\u001b[32;1m\u001b[1;3mThe final answer to the question \"What's 3 plus 5 multiplied by 2?\" is 16.0.\u001b[0m\n",
+      "Tool: 13.0\n",
+      "Tool: 10.0\n",
+      "\u001b[32;1m\u001b[1;3mThe answer is 13.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'input': \"What's 3 plus 5 multiplied by 2?\", 'output': 'The final answer to the question \"What\\'s 3 plus 5 multiplied by 2?\" is 16.0.'}\n"
+      "{'input': \"What's 3 plus 5 multiplied by 2?\", 'output': 'The answer is 13.'}\n"
      ]
     }
    ],
