--- a/tests/tools/test2.ipynb
+++ b/tests/tools/test2.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,8 +426,8 @@
     "                NVIDIA Air is a cloud-hosted data center simulation platform designed to create a virtual environment \n",
     "                that mimics real-world production settings. It allows users to build and run simulations of \n",
     "                complex data center networks, enabling them to validate configurations, features, and automation code effectively. \n",
-    "                You should answer questions related to this topic only. be consicein your answers.\n",
-    "                If you don't have enough information to complete the task, ask the user for more details. Be specific about what information you need. \n",
+    "                You should answer questions related to this topic only. Be consice in your answers.\n",
+    "                Do not offer to do anything that you do not have a tool for. \n",
     "                \"\"\"\n",
     "    }, {\n",
     "        \"role\": \"user\",\n",
@@ -447,23 +447,23 @@
     "        \"role\": \"tool\",\n",
     "        \"tool_call_id\": \"call_ckcb\",\n",
     "        \"name\": \"get_simulation_list\",\n",
-    "        \"content\": \"['Sim1']\"\n",
+    "        \"content\": \"[]\"\n",
     "    }\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is one simulation in the list:\n",
+      "You have no simulations created. \n",
       "\n",
-      "1. Sim1\n"
+      "Simulation list is currently empty.\n"
      ]
     }
    ],
